tests/ui/E0599-write-macro/write-fmt-method-error.stderr
error[E0599]: cannot write into `MyStruct`
  --> $DIR/write-fmt-method-error.rs:23:5
   |
LL |     write!(s, "Hello, world!");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type does not implement the `write_fmt` method
   = help: try adding `use std::fmt::Write;` or `use std::io::Write;` to bring the appropriate trait into scope
   = note: this error originates in the macro `write` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
